// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`E2E testing Testing component functionallity from DOM event Should render reveal after click then hide it after another 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="activator"
  >
    <button>
       Need help? 
      <i
        class="material-icons"
      >
        mode_comment
      </i>
    </button>
  </div>
  <transition-stub>
    <div
      class="info"
    >
      
      
      <h2>
        test name
      </h2>
      <ol>
        
        <li>
          first req
        </li>
        <li>
          second req
        </li>
        
      </ol>
      
      
    </div>
  </transition-stub>
  
</div>
`;

exports[`E2E testing Testing component functionallity from DOM event Should render reveal after click then hide it after another 2`] = `
<div
  data-v-app=""
>
  
  <div
    class="activator"
  >
    <button>
       Need help? 
      <i
        class="material-icons"
      >
        mode_comment
      </i>
    </button>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
  
</div>
`;
